--- a/example/package.json
+++ b/example/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "onsenui": "^2.9.2",
     "onsenui-react-redux-navigator": "../",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-onsenui": "^1.10.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "react-scripts-ts": "2.14.0"
   },
   "scripts": {
@@ -17,8 +21,11 @@
   "devDependencies": {
     "@types/jest": "^22.2.2",
     "@types/node": "^9.6.0",
+    "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.41",
     "@types/react-dom": "^16.0.4",
+    "@types/react-onsenui": "^2.8.5",
+    "@types/react-redux": "^5.0.15",
     "typescript": "^2.7.2"
   }
 }
