--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react": "^16.0.0",
     "@types/react-onsenui": "^2.8.5",
     "@types/react-redux": "^5.0.15",
-    "typescript": "^2.7.2",
-    "react-onsenui": "^1.10.0"
+    "react-onsenui": "^1.10.0",
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^2.7.2"
   },
   "dependencies": {
     "typescript-fsa": "^2.5.0",
