--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,8 @@
     "react-dom": "^16.2.0",
     "react-onsenui": "^1.10.0",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "react-scripts-ts": "2.14.0"
+    "react-scripts-ts": "2.16.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
